--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,55 @@
 ---
 services:
-  template-api:
-    container_name: template-api
-    build:
-      dockerfile: Dockerfile
-    image: template-api:latest
-    restart: always
+  #  event-platform-api:
+  #    container_name: event-platform-api
+  #    build:
+  #      dockerfile: Dockerfile
+  #    image: event-platform-api:latest
+  #    restart: always
+  #    ports:
+  #      - "8080:8080"
+
+  zookeeper:
+    image: confluentinc/cp-zookeeper:7.4.4
+    environment:
+      ZOOKEEPER_CLIENT_PORT: 2181
+      ZOOKEEPER_TICK_TIME: 2000
     ports:
-      - "8080:8080"
+      - 22181:2181
+
+  kafka:
+    image: confluentinc/cp-kafka:7.4.4
+    depends_on:
+      - zookeeper
+    ports:
+      - '9092:9092'
+    restart: always
+    environment:
+      KAFKA_BROKER_ID: 1
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_ADVERTISED_LISTENERS:
+        PLAINTEXT://localhost:9092,PLAINTEXT_HOST://localhost:29092
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP:
+        PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
+      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+
+  pg:
+    image: postgres:latest
+    restart: always
+    environment:
+      POSTGRES_USER: event_platform
+      POSTGRES_PASSWORD: mypwd
+      POSTGRES_DB: event_platform
+    ports:
+      - '5432:5432'
+    volumes:
+      - postgres:/var/lib/postgresql/data
+
+volumes:
+  postgres:
+    driver: local
+  kafka_data:
+    driver: local
+  redis:
+    driver: local
