--- a/build.gradle
+++ b/build.gradle
@@ -58,14 +58,16 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     compileOnly 'org.springframework.boot:spring-boot-starter-webflux'
     implementation 'org.springframework.kafka:spring-kafka'
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
 
     //metrics
+    implementation 'io.micrometer:micrometer-registry-prometheus:1.10.2'
 
     //tools
-    implementation 'com.kaiqkt:springtools-security:1.0.0'
+    implementation 'com.kaiqkt:springtools-security:1.0.1'
     implementation 'com.kaiqkt:springtools-healthcheck:1.0.0'
-    compileOnly 'org.projectlombok:lombok:1.18.20'
-    annotationProcessor 'org.projectlombok:lombok:1.18.20'
+    compileOnly 'org.projectlombok:lombok:1.18.30'
+    annotationProcessor 'org.projectlombok:lombok:1.18.30'
     implementation 'io.azam.ulidj:ulidj:1.0.1'
     implementation 'com.networknt:json-schema-validator:1.0.72'
     implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.12.3'
