--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -31,12 +31,16 @@ spring:
     password: mypwd
 
 management:
-  endpoints:
-    metrics:
+  endpoint:
+    prometheus:
       enabled: true
+  endpoints:
     web:
       exposure:
         include: prometheus
+      base-path: /
+      path-mapping:
+        prometheus: /metrics
 
 event-topic: event_platform
 
