--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,40 +1,15 @@
 ---
 services:
-  #  event-platform-api:
-  #    container_name: event-platform-api
-  #    build:
-  #      dockerfile: Dockerfile
-  #    image: event-platform-api:latest
-  #    restart: always
-  #    ports:
-  #      - "8080:8080"
-
-  zookeeper:
-    image: confluentinc/cp-zookeeper:7.4.4
-    environment:
-      ZOOKEEPER_CLIENT_PORT: 2181
-      ZOOKEEPER_TICK_TIME: 2000
-    ports:
-      - 22181:2181
-
-  kafka:
-    image: confluentinc/cp-kafka:7.4.4
-    depends_on:
-      - zookeeper
-    ports:
-      - '9092:9092'
-    restart: always
-    environment:
-      KAFKA_BROKER_ID: 1
-      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_ADVERTISED_LISTENERS:
-        PLAINTEXT://localhost:9092,PLAINTEXT_HOST://localhost:29092
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP:
-        PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
-      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
-      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
-
-  pg:
+#  event-platform-api:
+#    container_name: event-platform-api
+#    build:
+#      dockerfile: Dockerfile
+#    image: event-platform-api:latest
+#    restart: always
+#    ports:
+#      - "8080:8080"
+  postgres:
+    container_name: postgres
     image: postgres:latest
     restart: always
     environment:
@@ -45,11 +20,25 @@ services:
       - '5432:5432'
     volumes:
       - postgres:/var/lib/postgresql/data
+  localstack:
+    container_name: localstack
+    ports:
+      - "4566:4566"
+    image: localstack/localstack
+    environment:
+      - SERVICES=sqs
+      - AWS_DEFAULT_REGION=us-east-1
+      - AWS_SECRET_ACCESS_KEY=123secret
+      - AWS_ACCESS_KEY_ID=123secret
+      - DEBUG=1
+    command: sh ./local/localstack/init-localstack.sh
+    volumes:
+      - ./local/localstack:/etc/localstack/init/ready.d
+      - ./local/localstack/storage:/var/lib/localstack
+      - /var/run/docker.sock:/var/run/docker.sock
 
 volumes:
   postgres:
     driver: local
-  kafka_data:
-    driver: local
-  redis:
+  localstack:
     driver: local
