--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,7 @@ repositories {
     }
 }
 
-java.sourceSets["main"].java.srcDir("$buildDir/generated/src/main/java")
+java.sourceSets.main.java.srcDir("$buildDir/generated/src/main/java")
 
 openApiGenerate {
     generatorName.set("spring")
@@ -45,8 +45,7 @@ openApiGenerate {
             performBeanValidationc        : "true",
             enumPropertyNaming            : "UPPERCASE",
             useSpringBoot3                : "true",
-            unhandledException            : "true",
-            additionalModelTypeAnnotations: '@lombok.Data @lombok.NoArgsConstructor @lombok.AllArgsConstructor @lombok.Builder',
+            unhandledException            : "true"
     ])
 }
 
@@ -57,7 +56,6 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     compileOnly 'org.springframework.boot:spring-boot-starter-webflux'
-    implementation 'org.springframework.kafka:spring-kafka'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
 
     //metrics
@@ -66,11 +64,13 @@ dependencies {
     //tools
     implementation 'com.kaiqkt:springtools-security:1.0.1'
     implementation 'com.kaiqkt:springtools-healthcheck:1.0.0'
-    compileOnly 'org.projectlombok:lombok:1.18.30'
-    annotationProcessor 'org.projectlombok:lombok:1.18.30'
     implementation 'io.azam.ulidj:ulidj:1.0.1'
     implementation 'com.networknt:json-schema-validator:1.0.72'
     implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.12.3'
+
+    implementation 'com.amazonaws:aws-java-sdk-sqs:1.12.734'
+    implementation 'com.amazonaws:amazon-sqs-java-messaging-lib:1.0.8'
+    implementation 'org.springframework:spring-jms:5.3.21'
 
     //code generator
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'
@@ -81,9 +81,11 @@ dependencies {
     implementation 'org.postgresql:postgresql:42.7.3'
     implementation 'org.flywaydb:flyway-maven-plugin:10.12.0'
 
-    //aws
+    testImplementation 'org.junit.jupiter:junit-jupiter-api'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
 }
 
-tasks.named('test') {
+
+test {
     useJUnitPlatform()
 }
