--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -1,7 +1,32 @@
 ---
 
 on: [pull_request]
+
 jobs:
+  check-branch-target:
+    runs-on: ubuntu-latest
+    name: Check branch target
+    steps:
+      - name: Get branch name and target
+        id: get-branch-name-and-target
+        run: |
+          echo ::set-output name=BRANCH_NAME::${GITHUB_HEAD_REF}
+          echo ::set-output name=TARGET_BRANCH::${GITHUB_BASE_REF}
+      - name: Check branch target
+        run: |
+          BRANCH_NAME=
+          "${{ steps.get-branch-name-and-target.outputs.BRANCH_NAME }}"
+          TARGET_BRANCH=
+          "${{ steps.get-branch-name-and-target.outputs.TARGET_BRANCH }}"
+          if [[ "$BRANCH_NAME" =~ ^feature/ &&
+          "$TARGET_BRANCH" != "develop" ]]; then
+            echo "Feature branches can only be merged into develop"
+            exit 1
+          elif [[ "$BRANCH_NAME" =~ ^(hotfix|release)/
+          && "$TARGET_BRANCH" != "master" ]]; then
+            echo "Hotfix and release branches can only be merged into master"
+            exit 1
+          fi
   test:
     runs-on: ubuntu-latest
     name: test-pr
@@ -21,3 +46,22 @@ jobs:
         run: ./gradlew openApiGenerate
       - name: Run unit and component tests
         run: ./gradlew test
+  build:
+    runs-on: ubuntu-latest
+    name: build-pr
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up JDK 17
+        uses: actions/setup-java@v1
+        with:
+          java-version: '17'
+          cache: gradle
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
+      - name: Generate open api spec
+        env:
+          GPR_USER: ${{ secrets.GPR_USER }}
+          GPR_API_KEY: ${{ secrets.GPR_API_KEY }}
+        run: ./gradlew openApiGenerate
+      - name: Run unit and component tests
+        run: ./gradlew build
