--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -36,7 +36,6 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: '17'
-          cache: gradle
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
       - name: Generate open api spec
@@ -45,6 +44,9 @@ jobs:
           GPR_API_KEY: ${{ secrets.GPR_API_KEY }}
         run: ./gradlew openApiGenerate
       - name: Run unit and component tests
+        env:
+          GPR_USER: ${{ secrets.GPR_USER }}
+          GPR_API_KEY: ${{ secrets.GPR_API_KEY }}
         run: ./gradlew test
   build:
     runs-on: ubuntu-latest
