--- a/build.gradle
+++ b/build.gradle
@@ -17,27 +17,14 @@ springBoot {
     buildInfo()
 }
 
-def gprUser = project.findProperty("gpr.user") as String ?: System.getenv("GPR_USER")
-def gprKey = project.findProperty("gpr.key") as String ?: System.getenv("GPR_API_KEY")
-
-if (gprUser == null || gprUser.trim().isEmpty()) {
-    println(System.getenv("GPR_USER"))
-    println(project.findProperty("gpr.user"))
-    throw new GradleException("gpr.user is not set")
-}
-
-if (gprKey == null || gprKey.trim().isEmpty()) {
-    throw new GradleException("gpr.key is not set")
-}
-
 repositories {
     mavenCentral()
     maven {
         name = "GitHubPackages"
         url = uri("https://maven.pkg.github.com/kaiqkt/*")
         credentials {
-            username = gprUser
-            password = gprKey
+            username = project.findProperty("gpr.user") as String ?: System.getenv("GPR_USER")
+            password = project.findProperty("gpr.key") as String ?: System.getenv("GPR_API_KEY")
         }
     }
 }
