--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -59,7 +59,7 @@ jobs:
         run: chmod +x gradlew
       - name: Generate open api spec
         run: ./gradlew openApiGenerate
-      - name: Run unit and component tests
+      - name: Run build
         run: ./gradlew build
         env:
           GPR_USER: ${{ secrets.GPR_USER }}
