--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -14,8 +14,8 @@ jobs:
           pattern="^(feature|release|hotfix)/[a-z0-9-]+$"
           if [[ ! $branch_name =~ $pattern ]]; then
             echo "ERROR: The name of the branch is not in the correct format!"
-            echo -e "Branch names should have a prefix \n
-          (feature/, release/, hotfix/)\nand should be in kebab-case."
+            echo -e "Branch names should have a prefix
+          (feature/, release/, hotfix/)and should be in kebab-case."
             echo "Example: feature/create-endpoint"
             exit 1
           fi
