--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -13,17 +13,17 @@ jobs:
           branch_name="${{ github.head_ref }}"
           target_branch_name="${{ github.base_ref }}"
           echo "pull request branch name: $branch_name
-               to target branch name: $target_branch_name"
+          to target branch name: $target_branch_name"
 
           release_pattern="^(release)/[0-9]+.[0-9]+$"
           hotfix_pattern="^(hotfix)/[0-9]+.[0-9]+$"
           feature_pattern="^(feature)/[0-9]+.[0-9]+$"
 
           if [[ $branch_name =~ $feature_pattern ]]; then
-            echo "Feature branch detected
-            if [[ target_branch_name != "develop" ]]; then
-                echo "ERROR: Feature branches should be
-               created from the develop branch!"
+            echo "Feature branch detected"
+            if [[ $target_branch_name != "develop" ]]; then
+                echo "ERROR: Feature branches should
+          be created from the develop branch!"
                 exit 1
             fi
           fi
