--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -16,12 +16,11 @@ jobs:
 
           release_pattern="^(release)/[0-9]+.[0-9]+$"
           hotfix_pattern="^(hotfix)/[0-9]+.[0-9]+$"
-          feature_pattern="^(feature)/[0-9]+.[0-9]+$"
+          feature_pattern="^(feature)/([a-zA-Z0-9-]+)$"
 
-          if [[ "$branch_name" =~ $feature_pattern ]]; then
+          if [[ "$branch_name" =~ feature_pattern ]]; then
             echo "Feature branch detected"
           fi
-          |
         shell: bash
   test:
     runs-on: ubuntu-latest
