--- a/.github/workflows/backport.yml
+++ b/.github/workflows/backport.yml
@@ -11,14 +11,16 @@ jobs:
   backport:
     runs-on: ubuntu-latest
     steps:
-      - name: Run the Action
-        uses: devops-infra/action-pull-request@v0.5.5
+      - name: Checkout code
+        uses: actions/checkout@v2
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          source_branch: master
-          target_branch: develop
-          title: 'backport/${{ github.run_id }}'
-          body: "**Automated pull request**"
-          get_diff: true
-          ignore_users: "dependabot"
-          allow_no_diff: false
+          ref: master
+
+      - name: Create Pull Request
+        uses: peter-evans/create-pull-request@v3
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          base: develop
+          branch: 'backport/${{ github.run_id }}'
+          title: 'Backport changes to develop'
+          body: 'This PR backports changes from master to develop.'
