--- a/.github/workflows/backport.yml
+++ b/.github/workflows/backport.yml
@@ -20,7 +20,7 @@ jobs:
         uses: peter-evans/create-pull-request@v3
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          base: develop
+          base: master
           branch: 'backport/${{ github.run_id }}'
           title: 'Backport changes to develop'
           body: 'This PR backports changes from master to develop.'
