--- a/.github/workflows/backport.yml
+++ b/.github/workflows/backport.yml
@@ -11,16 +11,8 @@ jobs:
   backport:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout do código
-        uses: actions/checkout@v2
-        with:
-          ref: master
-
-      - name: Criar Pull Request
-        uses: peter-evans/create-pull-request@v3
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          base: develop
-          branch: 'backport/${{ github.run_id }}'
-          title: 'Backport de alterações para develop'
-          body: 'Este PR faz o backport de alterações da master para develop.'
+      - name: create pull request
+        run: gh pr create -B master -H develop --title 'Backport'
+          --body 'Created by Github action'
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
