--- a/.github/workflows/backport.yml
+++ b/.github/workflows/backport.yml
@@ -14,7 +14,9 @@ jobs:
         uses: actions/checkout@v2
 
       - name: create pull request
-        run: gh pr create -B develop -H master --title 'Backport'
+        run:
+          timestamp=$(date +%Y%m%d%H%M%S)
+          gh pr create -B develop -H master --title "backport/$timestamp"
           --body 'Created by Github action'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
