pull request trigger after backport be completed

--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -1,8 +1,17 @@
 ---
 
-name: Pull request
+name: pull request
 
-on: [pull_request]
+on:
+  pull_request:
+    types:
+      - opened
+      - synchronize
+      - reopened
+  workflow_run:
+    workflows: ["backport"]
+    types:
+      - completed
 
 jobs:
   check-branch-name:
