--- a/.github/workflows/backport.yml
+++ b/.github/workflows/backport.yml
@@ -1,5 +1,5 @@
 ---
-name: Backport
+name: backport
 
 on:
   push:
@@ -14,9 +14,10 @@ jobs:
         uses: actions/checkout@v2
 
       - name: create pull request
-        run:
+        run: |
           timestamp=$(date +%Y%m%d%H%M%S)
           gh pr create -B develop -H master --title "backport/$timestamp"
           --body 'Created by Github action'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        shell: bash
