--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -28,6 +28,7 @@ jobs:
           release_pattern="^(release)/[0-9]+.[0-9]+.[0-9]+$"
           hotfix_pattern="^(hotfix)/[0-9]+.[0-9]+.[0-9]+$"
           feature_pattern="^(feature)/([a-zA-Z0-9-]+)$"
+          backport_pattern="^(backport)/([a-zA-Z0-9-]+)$"
 
           if [[ "$branch_name" =~ $feature_pattern ]]; then
             echo "Feature branch detected"
@@ -45,6 +46,12 @@ jobs:
             echo "Hotfix branch detected"
             if [[ "$target_branch_name" != "master" ]]; then
               echo "Hotfix branch must target master"
+              exit 1
+            fi
+          elif [[ "$branch_name" =~ $backport_pattern ]]; then
+            echo "Backport branch detected"
+            if [[ "$target_branch_name" != "develop" ]]; then
+              echo "Backport branch must target develop"
               exit 1
             fi
           else
