--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -3,15 +3,13 @@
 name: pull request
 
 on:
+  check_run:
+    types: [completed]
   pull_request:
     types:
       - opened
       - synchronize
       - reopened
-  workflow_run:
-    workflows: ["backport"]
-    types:
-      - completed
 
 jobs:
   check-branch-name:
